# Final_test_2

./: README.md  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  models.py  serializer.py  urls.py  validators.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_remove_post_comment_comment_post_and_more.py
users/: admin.py  models.py  permissions.py  serializer.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_alter_user_date_born.py  0004_alter_user_email.py  0005_alter_user_date_born.py
